# JsonCodeGenerator-1

./: CMakeLists.txt
include/: JsonCodeGenerator.h
metaObject/: Classes.json  Code.hpp
src/: JsonCodeGenerator.cpp  main.cpp
